@@ -1,3 +1,8 @@
+2007-08-07  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-scripts.c (script_fu_menu_map):
+	added more mappings from old to new Script-Fu menu locations.
+
 2007-08-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpcolordisplay.[ch]: added GimpColorConfig and
